# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  game.h  input.h  util.h
src/: board.cpp  game.cpp  input.cpp  main.cpp
